# fast-embed

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cuda  LICENSE  Makefile  README.md  cognidata-inference-doc-tecnico.docx  config.yaml  deploy.sh  docker-compose.cuda.yml  docker-compose.gpu.yml  docker-compose.yml  entrypoint.sh
migrations/: 001_create_keys.sql  002_create_logs.sql
src/: config.rs  hardware.rs  main.rs  state.rs
src/inference/: embeddings.rs  mod.rs  nomic_bert.rs
src/middleware/: auth.rs  metering.rs  mod.rs  rate_limit.rs
src/routes/: admin.rs  embeddings.rs  health.rs  mod.rs
src/store/: keys.rs  logs.rs  mod.rs
